--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.0
 
+  # Google Sign-In
+  google_sign_in: ^6.2.2
+  http: ^1.4.0
+  flutter_secure_storage: ^9.2.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
