--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_sign_in: ^6.2.2
   http: ^1.4.0
   flutter_secure_storage: ^9.2.4
+  graphql_flutter: ^5.2.0
 
 dev_dependencies:
   flutter_test:
